--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@altipla/mpa",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Utilities for internal MPA apps with Go.",
   "scripts": {
     "test": ""
   },
-  "files": ["package.json"],
+  "files": [
+    "package.json"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/altipla-consulting/mpa.git"
